--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,17 +1,12 @@
 <resources>
-    <string name="app_name">Flower</string>
+    <string name="app_name">flower</string>
     <!-- Strings related to login -->
     <string name="prompt_email">Email</string>
-    <string name="prompt_username">用户名</string>
-    <string name="prompt_password">密码</string>
+    <string name="prompt_password">Password</string>
     <string name="action_sign_in">Sign in or register</string>
-    <string name="action_sign_in_short">登录</string>
+    <string name="action_sign_in_short">Sign in</string>
     <string name="welcome">"Welcome !"</string>
     <string name="invalid_username">Not a valid username</string>
     <string name="invalid_password">Password must be >5 characters</string>
     <string name="login_failed">"Login failed"</string>
-    <string name="title_activity_main">MainActivity</string>
-    <string name="title_home">首页</string>
-    <string name="title_dashboard">工作台</string>
-    <string name="title_notifications">通知</string>
 </resources>
